add basic first section, add github corner component, clean up

--- a/src/layouts/includes/htmlhead.styles.hbs
+++ b/src/layouts/includes/htmlhead.styles.hbs
@@ -12,3 +12,5 @@
 <!-- build:css(.tmp) resources/css/styles.print.min.css media="print" -->
 <link rel="stylesheet" href="resources/css/print.css" media="print">
 <!-- endbuild -->
+
+<link href="https://fonts.googleapis.com/css?family=Monda:400,700|Work+Sans:300,400,600&display=swap" rel="stylesheet">
