--- a/src/resources/scss/settings/_settings.scss
+++ b/src/resources/scss/settings/_settings.scss
@@ -1,7 +1,8 @@
 // GLOBAL SASS SETTINGS
 
 // FONTS
-$font-family-sans-serif: Arial, sans-serif;
+$font-family-sans-serif: 'Work Sans', sans-serif;
+$font-family-header: 'Monda', sans-serif;
 $font-weight-normal:     400;
 $font-weight-bold:       600;
 
@@ -9,11 +10,12 @@ $font-weight-bold:       600;
 //$z-index-component-xyz: 1;
 
 // COLORS
-$white: #fff;
+$bio-white: #fff;
 $black: #000;
+$main-orange: #F17C61;
 
 // BODY STYLES
-$body-bg: $white;
+$body-bg: $bio-white;
 $body-font-color:   $black;
 $body-font-family:  $font-family-sans-serif;
 $body-font-weight:  $font-weight-normal;
