--- a/src/components/BioButton/scaffolding/BioButton.hbs
+++ b/src/components/BioButton/scaffolding/BioButton.hbs
@@ -1,1 +1,10 @@
-<bio-button data-resources="[{paths: ['components/BioButton/index.js']}]"></bio-button>
+{{!-- <bio-button data-resources="[{paths: ['components/BioButton/index.js', 'components/BioButton/index.css']}]">Fill me</bio-button> --}}
+<div class="section">
+	<section>
+		<div class="row row--reducedWidth">
+			<div class="col">
+				{{bioInclude 'components/bioButton/bioButton'}}
+			</div>
+		</div>
+	</section>
+</div>
