--- a/src/pages/10components.BioButton.hbs
+++ b/src/pages/10components.BioButton.hbs
@@ -2,7 +2,7 @@
 # These values are used for creating the index
 # It is also possible to use these inside the partials via {{ data.frontMatter.[your property] }}
 title: BioButton
-description: A simple demo of BioButton
+description: The biotope website buttons
 ---
 
 {{!-- DEV-Notes:
@@ -11,5 +11,5 @@ description: A simple demo of BioButton
 --}}
 
 {{> layouts/layout.default
-	contentMain="components/BioButton/scaffolding/BioButton"
+	contentMain="components/bioButton/scaffolding/bioButton"
 }}
