added more colors to _settings for button gradients, changed colors to variables, added a hover effect, changed buttons to a tags

--- a/src/components/BioButton/bioButton.hbs
+++ b/src/components/BioButton/bioButton.hbs
@@ -1,4 +1,4 @@
-<button class="bioButton" data-resources="[{paths: ['components/bioButton/index.js', 'components/bioButton/index.css']}]">Watch</button>
-<button class="bioButton" data-resources="[{paths: ['components/bioButton/index.js', 'components/bioButton/index.css']}]">Who's behind Biotope.pe</button>
-<button class="bioButton bioButton--blue" data-resources="[{paths: ['components/bioButton/index.js', 'components/bioButton/index.css']}]">Github</button>
-<button class="bioButton bioButton--full" data-resources="[{paths: ['components/bioButton/index.js', 'components/bioButton/index.css']}]">Contact</button>
+<a href="http://localhost:9000" class="bioButton" data-resources="[{paths: ['components/bioButton/index.js', 'components/bioButton/index.css']}]">Watch</a>
+<a href="http://localhost:9000" class="bioButton bioButton--long" data-resources="[{paths: ['components/bioButton/index.js', 'components/bioButton/index.css']}]">Who's behind Biotope.pe</a>
+<a href="http://localhost:9000" class="bioButton bioButton--blue" data-resources="[{paths: ['components/bioButton/index.js', 'components/bioButton/index.css']}]">Github</a>
+<a href="http://localhost:9000" class="bioButton bioButton--full" data-resources="[{paths: ['components/bioButton/index.js', 'components/bioButton/index.css']}]">Contact</a>
