--- a/src/resources/scss/settings/_settings.scss
+++ b/src/resources/scss/settings/_settings.scss
@@ -13,6 +13,9 @@ $font-weight-bold:       600;
 $bio-white: #fff;
 $black: #000;
 $main-orange: #F17C61;
+$light-orange: #FFDA87;
+$dark-blue: #5E7FD3;
+$light-blue: #87FBE1;
 
 // BODY STYLES
 $body-bg: $bio-white;
