--- a/src/components/BioButton/index.scss
+++ b/src/components/BioButton/index.scss
@@ -1,43 +1,58 @@
-// @import "node_modules/@biotope/element/lib/host.mixin";
-// @import THE SETTINGS AND USE THE DEFAULT $font-family-heade
+@import  "../../resources/scss/settings/settings";
 
-.bioButton{
-        $border:2px;
+.bioButton {
+	$border: 2px;
 
-        position: relative;
-        padding: 10px 20px;
-        background: #fff;
-        border: none;
-        border-radius: 50px;
-        font-family: 'Monda', sans-serif;
-        font-size: 15px;
-        font-weight: 700;
-        text-transform: uppercase;
-        min-width: 150px;
-        
-        &:before{
-                content: '';
-                position: absolute;
-                top: 0;
-                right: 0;
-                bottom: 0;
-                left: 0;
-                margin: -$border;
-                background: linear-gradient(to bottom, orange, orangered);
-                border-radius: inherit;
-                border: 5px;
-                z-index: -1;
-        }
-        
-        &--blue:before{
-                background: linear-gradient(to bottom, lightblue, midnightblue);
-        }
-        &--full{
-                color: #fff;
-                background: linear-gradient(to bottom, orange, orangered);
-                font-weight: 400;
-             &:before{
-                     margin: 0;
-             }   
-        }
+	position: relative;
+	padding: 10px 50px;
+	background: $bio-white;
+	color: $black;
+	border: none;
+	border-radius: 50px;
+	font-family: $font-family-header;
+	font-size: 15px;
+	font-weight: $font-weight-bold;
+	text-transform: uppercase;
+        text-decoration: none;
+        transition: 0.15s ease-out;
+
+	&:hover {
+                background: transparent;
+                color: $bio-white;
+	}
+
+	&:after {
+		content: "";
+		position: absolute;
+		top: 0;
+		right: 0;
+		bottom: 0;
+		left: 0;
+		margin: -$border;
+		background: linear-gradient(to bottom, $light-orange, $main-orange);
+		border-radius: inherit;
+		border: 5px;
+		z-index: -1;
+	}
+	&--blue {
+		&:after {
+			background: linear-gradient(to bottom, $light-blue, $dark-blue);
+		}
+	}
+	&--full {
+		color: $bio-white;
+		background: transparent;
+                
+		&:before {
+			margin: 0;
+                }
+
+                &:hover{
+                        background: $bio-white;
+                        color: $black;
+                }
+	}
+	&--long {
+		padding: 10px 20px;
+	}
 }
