--- a/src/scaffolding/master.scaffolding.hbs
+++ b/src/scaffolding/master.scaffolding.hbs
@@ -8,6 +8,9 @@
             <p class="splash__claim">
                 One web component library. As many worlds as you want. Decide what the future looks like.
             </p>
+            <!-- placeholder buttons - will be replaced with bio components -->
+            <button class="splash__button splash__button--orange">Explore</button>
+            <button class="splash__button splash__button--blue">See Docs</button>
         </div>
     </div>
 </header>
