--- a/src/components/BioGithubCorner/styles.scss
+++ b/src/components/BioGithubCorner/styles.scss
@@ -1,6 +1,14 @@
-@import "node_modules/@biotope/element/lib/host.mixin";
+@import 'node_modules/@biotope/element/lib/host.mixin';
 
 @include host('bio-github-corner') {
+	svg {
+		fill: #fd6c6c;
+		color: #fff;
+		position: absolute;
+		top: 0;
+		border: 0;
+		right: 0;
+	}
 	.github-corner:hover .octo-arm {
 		animation: octocat-wave 560ms ease-in-out;
 	}
