rewritten butons to use bio elements

--- a/src/pages/10components.BioButtons.hbs
+++ b/src/pages/10components.BioButtons.hbs
@@ -1,8 +1,8 @@
 ---
 # These values are used for creating the index
 # It is also possible to use these inside the partials via {{ data.frontMatter.[your property] }}
-title: BioButton
-description: The biotope website buttons
+title: BioButtons
+description: A simple demo of BioButtons
 ---
 
 {{!-- DEV-Notes:
@@ -11,5 +11,5 @@ description: The biotope website buttons
 --}}
 
 {{> layouts/layout.default
-	contentMain="components/BioButton/scaffolding/BioButton"
+	contentMain="components/BioButtons/scaffolding/BioButtons"
 }}
