--- a/src/pages/10components.BioButtons.hbs
+++ b/src/pages/10components.BioButtons.hbs
@@ -1,8 +1,8 @@
 ---
 # These values are used for creating the index
 # It is also possible to use these inside the partials via {{ data.frontMatter.[your property] }}
-title: BioButtons
-description: A simple demo of BioButtons
+title: BioButton
+description: A simple demo of BioButton
 ---
 
 {{!-- DEV-Notes:
@@ -11,5 +11,5 @@ description: A simple demo of BioButtons
 --}}
 
 {{> layouts/layout.default
-	contentMain="components/BioButtons/scaffolding/BioButtons"
+	contentMain="components/BioButton/scaffolding/BioButton"
 }}
