feat(biobenefit): add BioBenefit, BioHeadline etc
re #14, re #24

--- a/src/layouts/includes/htmlhead.scripts.hbs
+++ b/src/layouts/includes/htmlhead.scripts.hbs
@@ -1,5 +1,5 @@
 <!-- All JavaScript at the bottom, except for Modernizr and configuration class -->
-<script src="https://unpkg.com/@webcomponents/webcomponentsjs@2.2.1/webcomponents-loader.js"></script>
+<script src="https://unpkg.com/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
 <script nomodule src="https://unpkg.com/whatwg-fetch"></script>
 <script nomodule src="https://unpkg.com/promise-polyfill"></script>
 <script nomodule src="https://unpkg.com/object-assign-polyfill"></script>
