--- a/src/layouts/includes/htmlhead.styles.hbs
+++ b/src/layouts/includes/htmlhead.styles.hbs
@@ -13,4 +13,4 @@
 <link rel="stylesheet" href="resources/css/print.css" media="print">
 <!-- endbuild -->
 
-<link href="https://fonts.googleapis.com/css?family=Monda:400,700|Work+Sans:300,400,600&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,600|Monda:200,400,700&display=swap" rel="stylesheet">
