--- a/src/pages/10components.BioBenefit.hbs
+++ b/src/pages/10components.BioBenefit.hbs
@@ -1,8 +1,8 @@
 ---
 # These values are used for creating the index
 # It is also possible to use these inside the partials via {{ data.frontMatter.[your property] }}
-title: BioBenefits
-description: A simple demo of BioBenefits
+title: BioBenefit
+description: A simple demo of a BioBenefit
 ---
 
 {{!-- DEV-Notes:
@@ -11,5 +11,6 @@ description: A simple demo of BioBenefits
 --}}
 
 {{> layouts/layout.default
-	contentMain="components/BioBenefits/scaffolding/BioBenefits"
+	contentMain="components/BioBenefit/scaffolding/BioBenefit"
 }}
+ 
