--- a/src/resources/scss/settings/_settings.scss
+++ b/src/resources/scss/settings/_settings.scss
@@ -1,23 +1,24 @@
 // GLOBAL SASS SETTINGS
 
 // FONTS
-$font-family-sans-serif: 'Work Sans', sans-serif;
-$font-family-header: 'Monda', sans-serif;
-$font-weight-normal:     400;
-$font-weight-bold:       600;
+$font-family-body:    'Work Sans', sans-serif;
+$font-family-titles:        'Monda', sans-serif;
+$font-weight-light:         200;
+$font-weight-normal:        400;
+$font-weight-bold:          600;
 
 // Z-INDEXES
 //$z-index-component-xyz: 1;
 
 // COLORS
-$bio-white: #fff;
-$black: #000;
-$main-orange: #F17C61;
+$bio-white:     #fff;
+$black:         #000;
+$main-orange:   #F17C61;
 
 // BODY STYLES
 $body-bg: $bio-white;
 $body-font-color:   $black;
-$body-font-family:  $font-family-sans-serif;
+$body-font-family:  $font-family-body;
 $body-font-weight:  $font-weight-normal;
 $body-font-style:   normal;
 $body-font-size:    17px;
