--- a/src/scaffolding/master.scaffolding.hbs
+++ b/src/scaffolding/master.scaffolding.hbs
@@ -1,4 +1,5 @@
-<bio-github-corner href="https://github.com/biotope" data-resources="[{paths: ['components/BioGithubCorner/index.js']}]"></bio-github-corner>
+<bio-github-corner href="https://github.com/biotope"
+    data-resources="[{paths: ['components/BioGithubCorner/index.js']}]"></bio-github-corner>
 <header class="splash">
     <div class="splash__intro">
         <img src="_assets/biotope-logo.svg" alt="" class="splash__logo">
@@ -14,3 +15,24 @@
         </div>
     </div>
 </header>
+<section class="benefits">
+    <div class="benefits__claim">
+        <bio-headline data-resources="[{paths: ['components/BioHeadline/index.js']}]">
+            Add, change and reuse web components – on any device, anywhere.
+        </bio-headline>
+    </div>
+    <div class="benefits__container">
+        <bio-benefit data-resources="[{paths: ['components/BioBenefit/index.js']}]"
+            imgsrc="../../_assets/icon-agnostic.png" title="Framework agnostic">
+            Biotope can be used in combination with any other framework of your choice: Angular, React, etc.
+        </bio-benefit>
+        <bio-benefit data-resources="[{paths: ['components/BioBenefit/index.js']}]"
+            imgsrc="../../_assets/icon-agnostic.png" title="Futureproof">
+            Emphasis on web components. Use all your UI-components indipendently in different projects
+        </bio-benefit>
+        <bio-benefit data-resources="[{paths: ['components/BioBenefit/index.js']}]"
+            imgsrc="../../_assets/icon-agnostic.png" title="Free">
+            The full version of biotope is opensource and will stay free of charge forever. No strings attached.
+        </bio-benefit>
+    </div>
+</section>
