--- a/src/resources/scss/global.scss
+++ b/src/resources/scss/global.scss
@@ -1,8 +1,12 @@
-@import 'settings/settings';
+@import 'defaultSassImports.scss';
+
+header,
+section {
+    height: 100vh;
+}
 
 .splash {
-    font-family: $font-family-header;
-    height: 100vh;
+    font-family: $font-family-titles;
     background-color: purple;
     color: #F17C61;
     
@@ -53,6 +57,17 @@
         }
         &:first-of-type {
             margin-left: 0;
+        }
+    }
+}
+
+.benefits {
+    &__container {
+        @include clearfix();
+        max-width: 800px;
+        margin: 0 auto;
+        bio-benefit {
+            @include span(4);
         }
     }
 }
