--- a/src/components/BioButton/scaffolding/BioButton.hbs
+++ b/src/components/BioButton/scaffolding/BioButton.hbs
@@ -1,1 +1,4 @@
-<bio-button data-resources="[{paths: ['components/BioButton/index.js']}]"></bio-button>
+<bio-button title="Watch" data-resources="[{paths: ['components/BioButton/index.js']}]"></bio-button>
+<bio-button title="Who's behind Biotope.pe" modifier="long" data-resources="[{paths: ['components/BioButton/index.js']}]"></bio-button>
+<bio-button title="Github" modifier="blue" data-resources="[{paths: ['components/BioButton/index.js']}]"></bio-button>
+<bio-button title="Contact" modifier="full" data-resources="[{paths: ['components/BioButton/index.js']}]"></bio-button>
