add headline & paragraph

--- a/src/scaffolding/master.scaffolding.hbs
+++ b/src/scaffolding/master.scaffolding.hbs
@@ -17,9 +17,13 @@
 </header>
 <section class="benefits">
     <div class="benefits__claim">
-        <bio-headline data-resources="[{paths: ['components/BioHeadline/index.js']}]">
+        <bio-headline power="2" data-resources="[{paths: ['components/BioHeadline/index.js']}]">
             Add, change and reuse web components – on any device, anywhere.
         </bio-headline>
+        <bio-paragraph data-resources="[{paths: ['components/BioParagraph/index.js']}]">
+            Bioto.pe’s web-component-based frontend ecosystem conrols entire Design Systems via a single repository. Add, change and reuse web components as many times you want - anywhere
+        </bio-paragraph>
+        <button>Who's behind biotope?</button>
     </div>
     <div class="benefits__container">
         <bio-benefit data-resources="[{paths: ['components/BioBenefit/index.js']}]"
