--- a/src/scaffolding/master.scaffolding.hbs
+++ b/src/scaffolding/master.scaffolding.hbs
@@ -14,3 +14,22 @@
         </div>
     </div>
 </header>
+
+<footer class="footer">
+    <div class="swooshFoldWrapper">
+        <div class="swooshFoldWrapper__swooshFold"></div>
+    </div>
+    {{!-- <div class="footer__githubLogoWrapper"> --}}
+        <img class="footer__githubLogo" src="_assets/github-logo.svg" alt="github octo-cat">
+    {{!-- </div> --}}
+<div class="footer__checkItOut">
+    <p>Of course we also built<br><span class="footer__bigWords">this website</span> with biotope.</p>
+            <!-- placeholder buttons - will be replaced with bio components -->
+        <button class="splash__button splash__button--blue">Check it out</button>  
+    </div>
+<div class="footer__essentials">
+    <a href="#">Impritn</a>
+    <a href="#">Privacy Policy</a>
+    <a href="#"> About VI</a>
+</div>
+</footer>
