--- a/src/resources/scss/global.scss
+++ b/src/resources/scss/global.scss
@@ -10,7 +10,7 @@
         display: flex;
         align-items: center;
         margin: 0 auto;
-        width: 625px;
+        max-width: 625px;
         padding-top: 200px;
     }
 
@@ -53,6 +53,117 @@
         }
         &:first-of-type {
             margin-left: 0;
+        }
+    }
+}
+
+.footer{
+    position: relative;
+    padding: ($includingSwooshPadding + 50px) 20px 0 20px;
+    background: $bio-gray;
+    color: $black;
+
+    @media screen and (min-width: $medium) {
+        display: flex;
+        justify-content: space-between;
+        padding: $includingSwooshPadding 10vw 0 10vw;
+    }
+    
+    @media screen and (min-width: $large) {
+        padding: $includingSwooshPadding 15vw 0 15vw;
+    }
+
+    @media screen and (min-width: $xlarge) {
+        padding: $includingSwooshPadding 18vw 0 15vw;
+    }
+
+    
+    
+    &__githubLogo{
+        position: absolute;
+        top: 30px;
+        left: 0;
+        transform: rotate(90deg);
+        width: 70px;
+
+        @media screen and (min-width: $large) {
+            top: auto;
+            left: auto;
+            bottom: 0;
+            transform: rotate(0);
+            width: auto;
+        }
+    }
+
+    &__checkItOut{
+        padding-top: 25px;
+        line-height: 1.3;
+
+        @media screen and (min-width: $medium) {
+            flex-grow: 1;
+            padding: 0 3vw;
+            font-size: 20px;
+        }
+        @media screen and (min-width: $large) {
+            padding-left: 17vw;
+        }
+    }
+    
+    &__bigWords{
+        font-family: $font-family-header;
+        font-size: 30px;
+        text-transform: uppercase;
+         @media screen and (min-width: $medium) {
+             font-size: 35px;
+        }
+    }
+    
+    svg{
+        background: beige;
+    }
+
+    &__essentials{
+        display: flex;
+        flex-flow: column;
+        padding: 40px 0;
+        font-weight: $font-weight-bold;
+
+        a {
+            margin-bottom: 10px;
+            color: $black;
+            text-decoration: none;
+            &:hover{
+                text-decoration: underline;
+            }
+
+            @media screen and (min-width: $large) {
+                margin-bottom: 20px;
+            }
+        }
+    }
+}
+
+.swooshFoldWrapper{
+    position: absolute;
+    left: 0;
+    top: -130px;
+    width: 100%;
+    height: $swooshHeight;
+    overflow: hidden;
+
+    &--inverted{
+        top: 0px;
+        transform: rotate(180deg);
+    }
+
+    &__swooshFold{
+        height: 130px;
+        width: 110vw;
+        border-bottom-left-radius: 41%;
+        border-bottom-right-radius: 41%;
+        box-shadow: 0 81px $bio-gray;
+        &--blue{
+            box-shadow: 0 81px darkblue;
         }
     }
 }
