24 create benefit component (#32)
* feat: init BioBenefits

re #24

* feat(biobenefit): add BioBenefit, BioHeadline etc

re #14, re #24

* add headline & paragraph

--- a/src/components/BioButton/styles.scss
+++ b/src/components/BioButton/styles.scss
@@ -10,7 +10,7 @@
 		color: $black;
 		border: $border solid $main-orange;
 		border-radius: 50px;
-		font-family: $font-family-header;
+		font-family: $font-family-titles;
 		font-size: 15px;
 		font-weight: $font-weight-bold;
 		text-transform: uppercase;
