biotope website: - implented component for scroll enabled animation using scrollMagic with gsap and bodymovin

--- a/src/scaffolding/master.scaffolding.hbs
+++ b/src/scaffolding/master.scaffolding.hbs
@@ -14,3 +14,7 @@
         </div>
     </div>
 </header>
+
+<section id="scroll-animation">
+	{{bioInclude 'components/BioScrollAnimation/scaffolding/BioScrollAnimation' }}
+</section>
