--- a/src/resources/scss/global.scss
+++ b/src/resources/scss/global.scss
@@ -1,4 +1,5 @@
 @import 'settings/settings';
+@import "../../../node_modules/breakpoint-sass/stylesheets/breakpoint";
 
 .splash {
     font-family: $font-family-header;
@@ -63,17 +64,17 @@
     background: $bio-gray;
     color: $black;
 
-    @media screen and (min-width: $medium) {
+    @include breakpoint ($medium) {
         display: flex;
         justify-content: space-between;
         padding: $includingSwooshPadding 10vw 0 10vw;
     }
     
-    @media screen and (min-width: $large) {
+    @include breakpoint ($large) {
         padding: $includingSwooshPadding 15vw 0 15vw;
     }
 
-    @media screen and (min-width: $xlarge) {
+    @include breakpoint ($xlarge) {
         padding: $includingSwooshPadding 18vw 0 15vw;
     }
 
@@ -86,7 +87,7 @@
         transform: rotate(90deg);
         width: 70px;
 
-        @media screen and (min-width: $large) {
+        @include breakpoint ($large) {
             top: auto;
             left: auto;
             bottom: 0;
@@ -99,44 +100,29 @@
         padding-top: 25px;
         line-height: 1.3;
 
-        @media screen and (min-width: $medium) {
+        @include breakpoint ($medium) {
             flex-grow: 1;
             padding: 0 3vw;
             font-size: 20px;
         }
-        @media screen and (min-width: $large) {
+        @include breakpoint ($large) {
             padding-left: 17vw;
         }
-    }
-    
-    &__bigWords{
-        font-family: $font-family-header;
-        font-size: 30px;
-        text-transform: uppercase;
-         @media screen and (min-width: $medium) {
-             font-size: 35px;
-        }
-    }
-    
-    svg{
-        background: beige;
     }
 
     &__essentials{
         display: flex;
         flex-flow: column;
         padding: 40px 0;
-        font-weight: $font-weight-bold;
 
         a {
             margin-bottom: 10px;
             color: $black;
-            text-decoration: none;
             &:hover{
                 text-decoration: underline;
             }
 
-            @media screen and (min-width: $large) {
+            @include breakpoint ($large) {
                 margin-bottom: 20px;
             }
         }
