--- a/src/resources/scss/settings/_settings.scss
+++ b/src/resources/scss/settings/_settings.scss
@@ -12,10 +12,12 @@ $font-weight-bold:          600;
 
 // COLORS
 $bio-white: #fff;
+$bio-gray: #F8FBFD;
 $black: #000;
 $main-orange: #F17C61;
 $light-orange: #FFDA87;
 $dark-blue: #5E7FD3;
+$darker-blue: #1F1F43;
 $light-blue: #87FBE1;
 
 // BODY STYLES
@@ -55,3 +57,7 @@ $section_margin_top_small: 60px;
 $section_margin_top_medium: 60px;
 $section_margin_top_large: 60px;
 $section_margin_top_xlarge: 80px;
+
+//account for SwooshFold padding
+$swooshHeight: 150px;
+$includingSwooshPadding: $swooshHeight - 100px;
