--- a/src/scaffolding/master.scaffolding.hbs
+++ b/src/scaffolding/master.scaffolding.hbs
@@ -16,6 +16,7 @@
         </div>
     </div>
 </header>
+
 <div class="row row--reducedWidth">
     <div class="col">
         <section class="benefits">
@@ -47,3 +48,22 @@
         </section>
     </div>
 </div>
+
+<footer class="footer">
+    <div class="swooshFoldWrapper">
+        <div class="swooshFoldWrapper__swooshFold"></div>
+    </div>
+    <a href="#">
+        <img class="footer__githubLogo" src="_assets/github-logo.svg" alt="github octo-cat">
+    </a>
+    <div class="footer__checkItOut">
+    <p>Of course we also built<br><span class="footer__bigWords">this website</span> with biotope.</p>
+            <!-- placeholder buttons - will be replaced with bio components -->
+        <bio-button title="Check it out" modifier="blue" data-resources="[{paths: ['components/BioButton/index.js']}]"></bio-button>
+    </div>
+<div class="footer__essentials">
+    <a href="#">Impritnt</a>
+    <a href="#">Privacy Policy</a>
+    <a href="#">About VI</a>
+</div>
+</footer>
