--- a/src/scaffolding/master.scaffolding.hbs
+++ b/src/scaffolding/master.scaffolding.hbs
@@ -10,8 +10,8 @@
                 One web component library. As many worlds as you want. Decide what the future looks like.
             </p>
             <!-- placeholder buttons - will be replaced with bio components -->
-            <bio-button title="Explore" data-resources="[{paths: ['components/BioButton/index.js']}]"></bio-button>
-            <bio-button title="See Docs" modifier="blue" data-resources="[{paths: ['components/BioButton/index.js']}]">
+            <bio-button title="Explore" modifier="whiteText" data-resources="[{paths: ['components/BioButton/index.js']}]"></bio-button>
+            <bio-button title="See Docs" modifier="blue whiteText" data-resources="[{paths: ['components/BioButton/index.js']}]">
             </bio-button>
         </div>
     </div>
