--- a/src/components/BioButton/styles.scss
+++ b/src/components/BioButton/styles.scss
@@ -17,6 +17,7 @@
 		text-decoration: none;
 		text-align: center;
 		transition: 0.15s ease-out;
+		cursor: pointer;
 
 		&:hover {
 			border: 2px solid transparent;
