--- a/src/scaffolding/master.scaffolding.hbs
+++ b/src/scaffolding/master.scaffolding.hbs
@@ -18,8 +18,8 @@
 </header>
 
 <section class="benefits">
-    <div class="swooshFoldWrapper">
-        <div class="swooshFoldWrapper__swooshFold"></div>
+    <div class="swoosh">
+        <div class="swoosh__fold"></div>
     </div>
     <div class="row row--reducedWidth">
         <div class="col">
@@ -52,8 +52,8 @@
 </section>
 
 <footer class="footer">
-    <div class="swooshFoldWrapper">
-        <div class="swooshFoldWrapper__swooshFold swooshFoldWrapper__swooshFold--gray"></div>
+    <div class="swoosh">
+        <div class="swoosh__fold swoosh__fold--gray"></div>
     </div>
     <a href="#">
         <img class="footer__githubLogo" src="_assets/github-logo.svg" alt="github octo-cat">
