--- a/src/resources/scss/settings/_settings.scss
+++ b/src/resources/scss/settings/_settings.scss
@@ -18,6 +18,7 @@ $main-orange: #F17C61;
 $light-orange: #FFDA87;
 $dark-blue: #5E7FD3;
 $darker-blue: #1F1F43;
+$even-darker-blue: #0A0A2C;
 $light-blue: #87FBE1;
 
 // BODY STYLES
