--- a/src/scaffolding/master.scaffolding.hbs
+++ b/src/scaffolding/master.scaffolding.hbs
@@ -1,5 +1,6 @@
 <bio-github-corner href="https://github.com/biotope"
     data-resources="[{paths: ['components/BioGithubCorner/index.js']}]"></bio-github-corner>
+    
 <header class="splash">
     <div class="splash__intro">
         <img src="_assets/biotope-logo.svg" alt="" class="splash__logo">
@@ -10,8 +11,10 @@
                 One web component library. As many worlds as you want. Decide what the future looks like.
             </p>
             <!-- placeholder buttons - will be replaced with bio components -->
-            <bio-button title="Explore" modifier="whiteText" data-resources="[{paths: ['components/BioButton/index.js']}]"></bio-button>
-            <bio-button title="See Docs" modifier="blue whiteText" data-resources="[{paths: ['components/BioButton/index.js']}]">
+            <bio-button title="Explore" modifier="whiteText"
+                data-resources="[{paths: ['components/BioButton/index.js']}]"></bio-button>
+            <bio-button title="See Docs" modifier="blue whiteText"
+                data-resources="[{paths: ['components/BioButton/index.js']}]">
             </bio-button>
         </div>
     </div>
@@ -31,7 +34,8 @@
                     Bioto.pe’s web-component-based frontend ecosystem conrols entire Design Systems via a single
                     repository. Add, change and reuse web components as many times you want - anywhere
                 </bio-paragraph>
-                <bio-button title="Who's behind biotope" modifier="long" data-resources="[{paths: ['components/BioButton/index.js']}]"></bio-button>
+                <bio-button title="Who's behind biotope" modifier="long"
+                    data-resources="[{paths: ['components/BioButton/index.js']}]"></bio-button>
             </div>
             <div class="benefits__container">
                 <bio-benefit data-resources="[{paths: ['components/BioBenefit/index.js']}]"
@@ -51,6 +55,12 @@
     </div>
 </section>
 
+<section class="extendedBenefits">
+    <div class="swoosh">
+        <div class="swoosh__fold"></div>
+    </div>
+</section>
+
 <footer class="footer">
     <div class="swoosh">
         <div class="swoosh__fold swoosh__fold--gray"></div>
@@ -59,13 +69,14 @@
         <img class="footer__githubLogo" src="_assets/github-logo.svg" alt="github octo-cat">
     </a>
     <div class="footer__checkItOut">
-    <p>Of course we also built<br><span class="footer__bigWords">this website</span> with biotope.</p>
-            <!-- placeholder buttons - will be replaced with bio components -->
-        <bio-button title="Check it out" modifier="blue" data-resources="[{paths: ['components/BioButton/index.js']}]"></bio-button>
+        <p>Of course we also built<br><span class="footer__bigWords">this website</span> with biotope.</p>
+        <!-- placeholder buttons - will be replaced with bio components -->
+        <bio-button title="Check it out" modifier="blue" data-resources="[{paths: ['components/BioButton/index.js']}]">
+        </bio-button>
     </div>
-<div class="footer__essentials">
-    <a href="#">Impritnt</a>
-    <a href="#">Privacy Policy</a>
-    <a href="#">About VI</a>
-</div>
+    <div class="footer__essentials">
+        <a href="#">Impritnt</a>
+        <a href="#">Privacy Policy</a>
+        <a href="#">About VI</a>
+    </div>
 </footer>
