--- a/src/scaffolding/master.scaffolding.hbs
+++ b/src/scaffolding/master.scaffolding.hbs
@@ -1,6 +1,6 @@
 <bio-github-corner href="https://github.com/biotope"
     data-resources="[{paths: ['components/BioGithubCorner/index.js']}]"></bio-github-corner>
-    
+
 <header class="splash">
     <div class="splash__intro">
         <img src="_assets/biotope-logo.svg" alt="" class="splash__logo">
@@ -63,7 +63,7 @@
 
 <footer class="footer">
     <div class="swoosh">
-        <div class="swoosh__fold swoosh__fold--gray"></div>
+        <div class="swoosh__fold"></div>
     </div>
     <a href="#">
         <img class="footer__githubLogo" src="_assets/github-logo.svg" alt="github octo-cat">
