--- a/src/components/BioBenefit/styles.scss
+++ b/src/components/BioBenefit/styles.scss
@@ -24,4 +24,15 @@
             text-align: center;
         }
     }
+
+    &:host([inverted]) {
+        .wrapper {
+            h3 {
+                color: $bio-white;
+            }
+            p {
+                color: $lightest-blue;
+            }
+        }
+    }
 }
