--- a/src/resources/scss/global.scss
+++ b/src/resources/scss/global.scss
@@ -1,16 +1,11 @@
 @import 'defaultSassImports.scss';
 
-header,
-section {
-    @include breakpoint($medium){
-        height: 800px;
-    }
-}
-
 .splash {
 	font-family: $font-family-titles;
 	background-color: purple;
-	color: #f17c61;
+    color: #f17c61;
+    padding-bottom: 90px;
+    height: 800px;
 
 	&__intro {
 		display: flex;
@@ -47,6 +42,8 @@ section {
 
 .benefits {
     position: relative;
+    padding-bottom: 90px;
+    height: 800px;
 
 	&__claim {
 		margin: 20px 0;
@@ -84,6 +81,7 @@ section {
 .extendedBenefits {
     position: relative;
     background-color: $even-darker-blue;
+    padding-bottom: 90px;
 }
 
 .swoosh {
