adjust benefits section to pre-timo design

--- a/src/resources/scss/global.scss
+++ b/src/resources/scss/global.scss
@@ -50,23 +50,36 @@ section {
 
 	&__claim {
 		margin: 20px 0;
-		text-align: center;
+        text-align: center;
+        
+        > div {
+            @include breakpoint($medium) {
+                flex: 1;
+            }
+        }
+
+        img {
+            max-height: 400px;
+
+            @include breakpoint($medium) {
+                flex: 1;
+            }
+        }
+
 		@include breakpoint($medium) {
-            width: 40vw;
-            left: 50%;
-            position: absolute;
-			text-align: left;
+            text-align: left;
+            display: flex;
+            width: 100%;
+            justify-content: space-around;
 		}
     }
     
 	&__container {
 		@include clearfix();
 		@include breakpoint($medium) {
-			position: absolute;
-			bottom: 20px;
-			@include span(10);
-			left: 50%;
-			transform: translate(-50%);
+            @include span(10);
+            float: none;
+            margin: 0 auto;
         }
         
 		bio-benefit {
@@ -75,7 +88,7 @@ section {
 			}
 		}
     }
-    
+
     .row{
         margin-top: 0;
     }
