--- a/src/scaffolding/master.scaffolding.hbs
+++ b/src/scaffolding/master.scaffolding.hbs
@@ -1,5 +1,6 @@
 <bio-github-corner href="https://github.com/biotope"
     data-resources="[{paths: ['components/BioGithubCorner/index.js']}]"></bio-github-corner>
+
 <header class="splash">
     <div class="splash__intro">
         <img src="_assets/biotope-logo.svg" alt="" class="splash__logo">
@@ -56,9 +57,38 @@
     </div>
 </section>
 
+<section class="extendedBenefits">
+    <div class="swoosh">
+        <div class="swoosh__fold"></div>
+    </div>
+    <div class="row row--reducedWidth">
+        <div class="col">
+            <bio-section-headline data-resources="[{paths: ['components/BioSectionHeadline/index.js']}]">
+                You will </br> <strong>Benefit</strong>
+            </bio-section-headline>
+            <bio-benefit inverted data-resources="[{paths: ['components/BioBenefit/index.js']}]"
+                imgsrc="../../_assets/free.svg" title="Keep focus">
+                You develop high quality components, biotope takes care of architecture and dev environment for you
+            </bio-benefit>
+            <bio-benefit inverted data-resources="[{paths: ['components/BioBenefit/index.js']}]"
+                imgsrc="../../_assets/free.svg" title="Open source">
+                Keep all your design systems in one central place for multiple projects.
+            </bio-benefit>
+            <bio-benefit inverted data-resources="[{paths: ['components/BioBenefit/index.js']}]"
+                imgsrc="../../_assets/free.svg" title="Collaborate">
+                Bioto.pe makes it easy for a team of many developers to work in your component library.
+            </bio-benefit>
+            <bio-benefit inverted data-resources="[{paths: ['components/BioBenefit/index.js']}]"
+                imgsrc="../../_assets/free.svg" title="Scalability">
+                No matter how big your library gets, your projects only use the ones they need, so performance stays high.
+            </bio-benefit>
+        </div>
+    </div>
+</section>
+
 <footer class="footer">
     <div class="swoosh">
-        <div class="swoosh__fold swoosh__fold--gray"></div>
+        <div class="swoosh__fold"></div>
     </div>
     <a href="#">
         <img class="footer__githubLogo" src="_assets/github-logo.svg" alt="github octo-cat">
