--- a/src/resources/scss/global.scss
+++ b/src/resources/scss/global.scss
@@ -1,16 +1,11 @@
 @import 'defaultSassImports.scss';
 
-header,
-section {
-    @include breakpoint($medium){
-        height: 800px;
-    }
-}
-
 .splash {
 	font-family: $font-family-titles;
 	background-color: purple;
-	color: #f17c61;
+    color: #f17c61;
+    padding-bottom: 90px;
+    height: 800px;
 
 	&__intro {
 		display: flex;
@@ -47,6 +42,7 @@ section {
 
 .benefits {
     position: relative;
+    padding-bottom: 90px;
 
 	&__claim {
 		margin: 20px 0;
@@ -94,6 +90,12 @@ section {
     }
 }
 
+.extendedBenefits {
+    position: relative;
+    background-color: $even-darker-blue;
+    padding-bottom: 90px;
+}
+
 .swoosh {
     position: absolute;
     left: 0;
@@ -113,12 +115,12 @@ section {
         border-bottom-left-radius: 41%;
         border-bottom-right-radius: 41%;
         box-shadow: 0 81px $bio-white;
-        
-        &--blue {
-            box-shadow: 0 81px $darker-blue;
+
+        section.extendedBenefits & {
+            box-shadow: 0 81px $even-darker-blue;
         }
 
-        &--gray {
+        footer.footer & {
             box-shadow: 0 81px $bio-gray;
         }
     }
