--- a/src/resources/scss/settings/_settings.scss
+++ b/src/resources/scss/settings/_settings.scss
@@ -15,10 +15,12 @@ $bio-white: #fff;
 $bio-gray: #F8FBFD;
 $black: #000;
 $main-orange: #F17C61;
-$light-orange: #FFDA87;
+$light-orange: #ED9560;
 $dark-blue: #5E7FD3;
 $darker-blue: #1F1F43;
+$even-darker-blue: #0A0A2C;
 $light-blue: #87FBE1;
+$lightest-blue: #CED0DF;
 
 // BODY STYLES
 $body-bg: $bio-white;
