biotope website: - refactored function names of BioScrollAnimation.ts - use const where appropriate - markup: changed section id to class name

--- a/src/scaffolding/master.scaffolding.hbs
+++ b/src/scaffolding/master.scaffolding.hbs
@@ -51,7 +51,7 @@
     </div>
 </section>
 
-<section id="scroll-animation">
+<section class="scroll-animation">
 	{{bioInclude 'components/BioScrollAnimation/scaffolding/BioScrollAnimation' }}
 </section>
 
