--- a/src/resources/scss/global.scss
+++ b/src/resources/scss/global.scss
@@ -1,11 +1,40 @@
 @import 'defaultSassImports.scss';
 
+@mixin swoosh($position, $height, $direction, $color, $left, $right) {
+	content: '';
+	height: $height;
+	width: 100%;
+	background-color: $color;
+	position: absolute;
+	z-index: 100;
+	clip-path: inset(0 0 0 0 round 0 0 $left $right);
+	@if $position == 'top' {
+		top: - $height;
+	} 
+	@if $position == 'bottom' {
+		bottom: - $height;
+	}
+	@if $direction == 'up' {
+		transform: rotateX(180deg);
+	}
+}
+
+@mixin swoosh2($color) {
+	content: '';
+	width: 100%;
+	position: absolute;
+	top: -140px;
+	height: 150px;
+	background: $color;
+	clip-path: circle(265% at 60% 1630%);
+}
+
 .splash {
 	font-family: $font-family-titles;
 	background-color: purple;
-    color: #f17c61;
-    padding-bottom: 90px;
-    height: 800px;
+	color: #f17c61;
+	padding-bottom: 90px;
+	height: 800px;
 
 	&__intro {
 		display: flex;
@@ -41,128 +70,226 @@
 }
 
 .benefits {
-    position: relative;
-    padding-bottom: 90px;
+	position: relative;
+	padding-bottom: 90px;
 
 	&__claim {
 		margin: 20px 0;
-        text-align: center;
-        
-        > div {
-            @include breakpoint($medium) {
-                flex: 1;
-            }
-        }
+		text-align: center;
 
-        img {
-            max-height: 400px;
+		> div {
+			@include breakpoint($medium) {
+				flex: 1;
+			}
+		}
 
-            @include breakpoint($medium) {
-                flex: 1;
-            }
-        }
+		img {
+			max-height: 400px;
+
+			@include breakpoint($medium) {
+				flex: 1;
+			}
+		}
 
 		@include breakpoint($medium) {
-            text-align: left;
-            display: flex;
-            width: 100%;
-            justify-content: space-around;
+			text-align: left;
+			display: flex;
+			width: 100%;
+			justify-content: space-around;
 		}
-    }
-    
+	}
+
 	&__container {
 		@include clearfix();
 		@include breakpoint($medium) {
-            @include span(10);
-            float: none;
-            margin: 0 auto;
-        }
-        
+			@include span(10);
+			float: none;
+			margin: 0 auto;
+		}
+
 		bio-benefit {
 			@include breakpoint($medium) {
 				@include span(4);
 			}
 		}
-    }
+	}
 
-    .row{
-        margin-top: 0;
-    }
+	.row {
+		margin-top: 0;
+	}
 }
 
 .extendedBenefits {
-    position: relative;
-    background-color: $even-darker-blue;
-    padding-bottom: 90px;
+	position: relative;
+	background-color: $even-darker-blue;
+	padding-bottom: 170px;
+}
+
+.company {
+	position: relative;
+
+	&__logos {
+		display: flex;
+		justify-content: space-around;
+
+		@include breakpoint($medium) {
+			padding: 0 50px;
+			margin-top: 90px;
+		}
+
+		img {
+			margin-right: 10px;
+
+			@include breakpoint($medium) {
+				margin-right: 0;
+			}
+
+			&:last-child {
+				margin-right: 0;
+			}
+			display: none;
+
+			&:nth-child(1),
+			&:nth-child(2) {
+				display: block;
+			}
+
+			@include breakpoint($medium) {
+				&:nth-child(3),
+				&:nth-child(4) {
+					display: block;
+				}
+			}
+
+			@include breakpoint($large) {
+				&:nth-child(5),
+				&:nth-child(6) {
+					display: block;
+				}
+			}
+		}
+	}
+
+	&__leads {
+		text-align: center;
+
+		@include breakpoint($medium) {
+			margin-top: 90px;
+		}
+
+		p {
+			@extend %benefit-text;
+		}
+	}
+
+	.row {
+		margin-top: 0;
+	}
+
+	&::before {
+		@include swoosh('top', 150px, 'up', white, 60%, 70%);
+	}
+	
+	&::after {
+		@include swoosh('bottom', 50px, 'down', white, 60%, 70%);
+	}
+}
+
+.swoosh {
+	position: absolute;
+	left: 0;
+	top: -130px;
+	width: 100%;
+	height: $swooshHeight;
+	overflow: hidden;
+
+	&--inverted {
+		top: 0px;
+		transform: rotate(180deg);
+	}
+
+	&__fold {
+		height: 130px;
+		width: 110vw;
+		border-bottom-left-radius: 41%;
+		border-bottom-right-radius: 41%;
+		box-shadow: 0 81px $bio-white;
+
+		section.extendedBenefits &,
+		section.company & {
+			box-shadow: 0 81px $even-darker-blue;
+		}
+
+		footer.footer & {
+			box-shadow: 0 81px $bio-gray;
+		}
+	}
 }
 
 .footer {
-    position: relative;
-    padding: ($includingSwooshPadding + 50px) 20px 0 20px;
-    background: $bio-gray;
-    color: $black;
+	position: relative;
+	padding: ($includingSwooshPadding + 50px) 20px 0 20px;
+	background: $bio-gray;
+	color: $black;
 
-    @include breakpoint($medium) {
-        display: flex;
-        justify-content: space-between;
-        padding: $includingSwooshPadding 10vw 0 10vw;
-    }
-    
-    @include breakpoint($large) {
-        padding: $includingSwooshPadding 15vw 0 15vw;
-    }
+	@include breakpoint($medium) {
+		display: flex;
+		justify-content: space-between;
+		padding: $includingSwooshPadding 10vw 0 10vw;
+	}
 
-    @include breakpoint($xlarge) {
-        padding: $includingSwooshPadding 18vw 0 15vw;
-    }
+	@include breakpoint($large) {
+		padding: $includingSwooshPadding 15vw 0 15vw;
+	}
 
-    
-    
-    &__githubLogo {
-        position: absolute;
-        top: 30px;
-        left: 0;
-        transform: rotate(90deg);
-        width: 70px;
+	@include breakpoint($xlarge) {
+		padding: $includingSwooshPadding 18vw 0 15vw;
+	}
+	&__githubLogo {
+		position: absolute;
+		top: 30px;
+		left: 0;
+		transform: rotate(90deg);
+		width: 70px;
 
-        @include breakpoint($large) {
-            top: auto;
-            left: auto;
-            bottom: 0;
-            transform: rotate(0);
-            width: auto;
-        }
-    }
+		@include breakpoint($large) {
+			top: auto;
+			left: auto;
+			bottom: 0;
+			transform: rotate(0);
+			width: auto;
+		}
+	}
 
-    &__checkItOut {
-        padding-top: 25px;
-        line-height: 1.3;
+	&__checkItOut {
+		padding-top: 25px;
+		line-height: 1.3;
 
-        @include breakpoint($medium) {
-            flex-grow: 1;
-            padding: 0 3vw;
-            font-size: 20px;
-        }
-        @include breakpoint($large) {
-            padding-left: 17vw;
-        }
-    }
+		@include breakpoint($medium) {
+			flex-grow: 1;
+			padding: 0 3vw;
+			font-size: 20px;
+		}
+		@include breakpoint($large) {
+			padding-left: 17vw;
+		}
+	}
 
-    &__essentials {
-        display: flex;
-        flex-flow: column;
-        padding: 40px 0;
+	&__essentials {
+		display: flex;
+		flex-flow: column;
+		padding: 40px 0;
 
-        a {
-            margin-bottom: 10px;
-            color: $black;
-            &:hover {
-                text-decoration: underline;
-            }
+		a {
+			margin-bottom: 10px;
+			color: $black;
+			&:hover {
+				text-decoration: underline;
+			}
 
-            @include breakpoint($large) {
-                margin-bottom: 20px;
-            }
-        }
-    }
+			@include breakpoint($large) {
+				margin-bottom: 20px;
+			}
+		}
+	}
 }
