feat(company-section): add alt tags for company logos

--- a/src/scaffolding/master.scaffolding.hbs
+++ b/src/scaffolding/master.scaffolding.hbs
@@ -96,12 +96,12 @@
                 You are in </br> <strong>good company</strong>
             </bio-section-headline>
             <div class="company__logos">
-                <img src="../_assets/logo-ui.svg" alt="">
-                <img src="../_assets/logo-roche.svg" alt="">
-                <img src="../_assets/logo-basf.svg" alt="">
-                <img src="../_assets/logo-siemens.svg" alt="">
-                <img src="../_assets/logo-man.svg" alt="">
-                <img src="../_assets/logo-munichre.svg" alt="">
+                <img src="../_assets/logo-ui.svg" alt="Union Investment">
+                <img src="../_assets/logo-roche.svg" alt="Roche">
+                <img src="../_assets/logo-basf.svg" alt="BASF">
+                <img src="../_assets/logo-siemens.svg" alt="Siemens">
+                <img src="../_assets/logo-man.svg" alt="MAN">
+                <img src="../_assets/logo-munichre.svg" alt="Munich RE">
             </div>
             <div class="company__leads">
                 <p>Need help setting up your frontend ecosystem? <br>
