--- a/src/scaffolding/master.scaffolding.hbs
+++ b/src/scaffolding/master.scaffolding.hbs
@@ -63,7 +63,7 @@
     </div>
     <div class="row row--reducedWidth">
         <div class="col">
-            <bio-section-headline data-resources="[{paths: ['components/BioSectionHeadline/index.js']}]">
+            <bio-section-headline inverted data-resources="[{paths: ['components/BioSectionHeadline/index.js']}]">
                 You will </br> <strong>Benefit</strong>
             </bio-section-headline>
             <bio-benefit inverted data-resources="[{paths: ['components/BioBenefit/index.js']}]"
@@ -80,12 +80,38 @@
             </bio-benefit>
             <bio-benefit inverted data-resources="[{paths: ['components/BioBenefit/index.js']}]"
                 imgsrc="../../_assets/free.svg" title="Scalability">
-                No matter how big your library gets, your projects only use the ones they need, so performance stays high.
+                No matter how big your library gets, your projects only use the ones they need, so performance stays
+                high.
             </bio-benefit>
         </div>
     </div>
 </section>
-
+<section class="company">
+    <div class="swoosh swoosh--inverted">
+        <div class="swoosh__fold"></div>
+    </div>
+    <div class="row row--reducedWidth">
+        <div class="col">
+            <bio-section-headline data-resources="[{paths: ['components/BioSectionHeadline/index.js']}]">
+                You are in </br> <strong>good company</strong>
+            </bio-section-headline>
+            <div class="company__logos">
+                <img src="../_assets/logo-ui.svg" alt="Union Investment">
+                <img src="../_assets/logo-roche.svg" alt="Roche">
+                <img src="../_assets/logo-basf.svg" alt="BASF">
+                <img src="../_assets/logo-siemens.svg" alt="Siemens">
+                <img src="../_assets/logo-man.svg" alt="MAN">
+                <img src="../_assets/logo-munichre.svg" alt="Munich RE">
+            </div>
+            <div class="company__leads">
+                <p>Need help setting up your frontend ecosystem? <br>
+                    We love to support you.</p>
+                <bio-button title="Contact VI"
+                    data-resources="[{paths: ['components/BioButton/index.js']}]"></bio-button>
+            </div>
+        </div>
+    </div>
+</section>
 <footer class="footer">
     <div class="swoosh">
         <div class="swoosh__fold"></div>
